Revision history for perl module Protocol::WebSocket

{{$NEXT}}

0.16 2014-01-07T20:33:59Z

 - just meta files update

0.15 2013-11-03T15:54:47Z

 - Explicitly stringify $payload in _mask() method (Toshio Ito)

0.14 2013-10-14T08:50:38Z

 - Fix Changes file (Neil Bowers)
 - Fix distribution (reported by Géraud CONTINSOUZAS)

0.13 2013-10-13T17:17:03Z

 - Implemented set cookies for requests (Joao Orui)

 The following changes made by Toshio Ito (debug-ito):
 - Add test in which Frame class generates and parses a series of fragments.
 - Add test for destructiveness of append() method.
 - Documentation: add remarks about destructiveness of append() method.
   Sometimes it's useful, the other times it's confusing.
 - Add documentation of "version" field in new() method.
 - Add documentation of "masked" field in new() method.
 - Remove fin() accessor from documentation and test. If a message is
   fragmented, the return value of fin() is meaningless anyway. Plus, probably
   current implementation does not handle fin flags if control frames are
   injected in non-control fragments. If we want fin() accessor, the test for
   that case is necessary.
 - Add documentation about "opcode" field in new() method and opcode() accessor
   method. tests are also added.
 - Add is_continuation() method.
 - Now "type" field for new() is immediately resolved to opcode, so that
   new(type => $type) and is_{type} methods are now consistent. This fixes
   github issue vti/protocol-websocket#19 ($frame->{type} field is preserved for
   backward-compatibility, but direct assignment $frame->{type} = "close"
   followed by $frame->to_bytes() will not work anymore. However, direct
   assignment is considered rude anyway...)
 - Add "continuation" frame type. opcode() method is revised so that it can
   correctly return 0 if $frame->{opcode} == 0.
 - POD update: ATTRIBUTES - type section is moved under new() method. This is
   way more straightforward.